IO & System Libraries
1. Include files are moved to the "Dream" folder. All include pathes are
changed accordingly.
2. "IO" library added.
3. "System" library added.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -47,17 +47,17 @@ include_directories(${Boost_INCLUDE_DIRS})
 
 # add_subdirectory(Cryptography Cryptography)
 add_subdirectory(Essential Essential)
-# add_subdirectory(Filesystem Filesystem)
+add_subdirectory(IO IO)
 # add_subdirectory(Logging Logging)
 # add_subdirectory(PEBox PEBox)
 # add_subdirectory(PEFile PEFile)
-# add_subdirectory(System System)
+add_subdirectory(System System)
 
 # add_dependencies(Cryptography Essential)
-# add_dependencies(Filesystem Essential System)
+add_dependencies(Dream.Foundation.IO Dream.Foundation.Essential Dream.Foundation.System)
 # add_dependencies(Logging Essential Filesystem System)
 # add_dependencies(PEBox Cryptography Essential Filesystem System PEFile)
 # add_dependencies(PEFile Cryptography Essential Filesystem System)
-# add_dependencies(System Essential)
+add_dependencies(Dream.Foundation.System Dream.Foundation.Essential)
 
 enable_testing()
