--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -48,14 +48,14 @@ include_directories(${Boost_INCLUDE_DIRS})
 # add_subdirectory(Cryptography Cryptography)
 add_subdirectory(Essential Essential)
 add_subdirectory(IO IO)
-# add_subdirectory(Logging Logging)
+add_subdirectory(Logging Logging)
 # add_subdirectory(PEBox PEBox)
 # add_subdirectory(PEFile PEFile)
 add_subdirectory(System System)
 
 # add_dependencies(Cryptography Essential)
 add_dependencies(Dream.Foundation.IO Dream.Foundation.Essential Dream.Foundation.System)
-# add_dependencies(Logging Essential Filesystem System)
+add_dependencies(Dream.Foundation.Logging Dream.Foundation.Essential Dream.Foundation.IO Dream.Foundation.System)
 # add_dependencies(PEBox Cryptography Essential Filesystem System PEFile)
 # add_dependencies(PEFile Cryptography Essential Filesystem System)
 add_dependencies(Dream.Foundation.System Dream.Foundation.Essential)
