"Cryptography" library added

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,7 +45,7 @@ find_package(Boost REQUIRED)
 find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 
-# add_subdirectory(Cryptography Cryptography)
+add_subdirectory(Cryptography Cryptography)
 add_subdirectory(Essential Essential)
 add_subdirectory(IO IO)
 add_subdirectory(Logging Logging)
@@ -53,7 +53,7 @@ add_subdirectory(Logging Logging)
 # add_subdirectory(PEFile PEFile)
 add_subdirectory(System System)
 
-# add_dependencies(Cryptography Essential)
+add_dependencies(Dream.Foundation.Cryptography Dream.Foundation.Essential)
 add_dependencies(Dream.Foundation.IO Dream.Foundation.Essential Dream.Foundation.System)
 add_dependencies(Dream.Foundation.Logging Dream.Foundation.Essential Dream.Foundation.IO Dream.Foundation.System)
 # add_dependencies(PEBox Cryptography Essential Filesystem System PEFile)
